--- a/src/styles/blocks/header.css
+++ b/src/styles/blocks/header.css
@@ -1,5 +1,8 @@
 .header {
   background-color: #1f2937;
+}
+
+.header__inner {
   display: flex;
   justify-content: space-between;
   align-items: center;
