--- a/src/styles/blocks/menu.css
+++ b/src/styles/blocks/menu.css
@@ -27,3 +27,39 @@
   background-color: #111827;
   color: #fff;
 }
+
+@media (width < 1024px) {
+  .menu__items {
+    gap: 12px;
+  }
+
+  .menu__link {
+    font-size: 12px;
+    line-height: 16px;
+  }
+}
+
+@media (width < 768px) {
+  .menu {
+    padding-left: 0;
+  }
+
+  .menu__items {
+    gap: 8px;
+  }
+}
+
+@media (width < 576px) {
+  .menu__items {
+    gap: 4px;
+  }
+
+  .menu__item {
+    font-size: 12px;
+  }
+
+  .menu__link {
+    font-size: 10px;
+    line-height: 10px;
+  }
+}
