--- a/src/styles/blocks/news.css
+++ b/src/styles/blocks/news.css
@@ -24,3 +24,19 @@
 .news__text {
   margin-bottom: 20px;
 }
+
+@media (width < 1024px) {
+  .news__title {
+    font-size: 18px;
+  }
+}
+
+@media (width < 768px) {
+  .news__header {
+    font-size: 20px;
+  }
+
+  .news__text {
+    font-size: 15px;
+  }
+}
