--- a/src/styles/blocks/title.css
+++ b/src/styles/blocks/title.css
@@ -6,3 +6,19 @@
   padding-top: 78px;
   padding-bottom: 78px;
 }
+
+@media (width < 1024px) {
+  .title {
+    padding-top: 40px;
+    font-size: 30px;
+    padding-bottom: 30px;
+  }
+}
+
+@media (width < 768px) {
+  .title {
+    font-size: 30px;
+    padding-top: 30px;
+    padding-bottom: 20px;
+  }
+}
