--- a/src/styles/blocks/blog.css
+++ b/src/styles/blocks/blog.css
@@ -41,6 +41,22 @@
   color: #6b7280;
 }
 
+.blog__icons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
+  margin: 16px 0;
+}
+
+.blog__button--active {
+  color: red;
+}
+
+.blog__content--list {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 @media (width < 1024px) {
   .blog {
     gap: 24px;
@@ -50,6 +66,10 @@
 @media (width < 768px) {
   .blog__content {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .blog__content--list {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 
   .blog__title {
