--- a/src/styles/blocks/blog.css
+++ b/src/styles/blocks/blog.css
@@ -103,6 +103,10 @@
   .blog__text {
     font-size: 18px;
   }
+
+  .blog__form-inner {
+    grid-column: -1 / 1;
+  }
 }
 
 @media (width < 576px) {
